--- a/workflow-examples/checkov-scan.yml
+++ b/workflow-examples/checkov-scan.yml
@@ -3,11 +3,12 @@ name: Checkov Security Scan
 on: [push]
 
 jobs:
+  ## checkov security scan
   security-scan-checkov:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
     - uses: grolston/cfn-security@master
-      env:
-        CLOUDFORMATION_DIRECTORY: "./cloudformation/"
-        TEST: "checkov"
+      with:
+        scanner: "checkov"
+        cloudformation_directory: './cloudformation/' ## change to your template directory
